--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12"
   }
